# Git-Turotial-Qt-Desktop-App

./: CMakeLists.txt  Footer.qml  FrontPage.qml  Header.qml  IndexTab.qml  IntroPage.qml  Page.qml  README.md  Sample.qml  book.cpp  book.h  main.cpp  mainwindow.cpp  mainwindow.h  page.cpp  page.h  qml.qrc
